@@ -8,6 +8,7 @@ Changes since 1.5.1
 * Fix for bug#49260, header guard in XPath transform header (SC)
 * Fix for bug#49264, string release crash (SC)
 * Fix for bug#44983, improper c14n of XSLT (SC)
+* Fix for bug#49289, setters for Reference Type/Id (SC)
 * Expose algorithm URI on Signature and Reference objects (SC)
 * White/blacklisting of otherwise registered algorithms (SC)
 
